Bug 258168 - Mask clipping determination insufficient for <use> elements
Summary: Mask clipping determination insufficient for <use> elements
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nikolas Zimmermann
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-15 15:41 PDT by Nikolas Zimmermann
Modified: 2023-06-16 04:47 PDT (History)
5 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikolas Zimmermann 2023-06-15 15:41:03 PDT
To determine if we need mask clipping or can use path clipping, we query the renderer for certain properties. This is insufficient for <use> elements, we have to also consider the referenced element in these checks --> otherwise path clipping will be used, where mask clipping was necessary (net result: hidden object, clipping appears broken)
Comment 1 Nikolas Zimmermann 2023-06-15 15:56:27 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15026
Comment 2 EWS 2023-06-16 04:46:30 PDT
Committed 265238@main (df148384b18a): <https://commits.webkit.org/265238@main>

Reviewed commits have been landed. Closing PR #15026 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-06-16 04:47:17 PDT
<rdar://problem/110894446>