Source/WebCore/rendering/svg/RenderSVGResourceClipper.cpp
@@ -93,31 +93,46 @@ bool RenderSVGResourceClipper::pathOnlyClipping(GraphicsContext& context, const 
     WindRule clipRule = WindRule::NonZero;
     Path clipPath;
 
+    auto rendererRequiresMaskClipping = [&clipPath](RenderObject& renderer) {
+        // Only shapes or paths are supported for direct clipping. We need to fall back to masking for texts.
+        if (is<RenderSVGText>(renderer))
+            return true;
+        auto& style = renderer.style();
+        if (style.display() == DisplayType::None || style.visibility() != Visibility::Visible)
+            return false;
+        // Current shape in clip-path gets clipped too. Fall back to masking.
+        if (style.clipPath())
+            return true;
+        // Fall back to masking if there is more than one clipping path.
+        if (!clipPath.isEmpty())
+            return true;
+        return false;
+    };
+
     // If clip-path only contains one visible shape or path, we can use path-based clipping. Invisible
     // shapes don't affect the clipping and can be ignored. If clip-path contains more than one
     // visible shape, the additive clipping may not work, caused by the clipRule. EvenOdd
     // as well as NonZero can cause self-clipping of the elements.
     // See also http://www.w3.org/TR/SVG/painting.html#FillRuleProperty
     for (Node* childNode = clipPathElement().firstChild(); childNode; childNode = childNode->nextSibling()) {
-        auto* renderer = childNode->renderer();
+        auto* graphicsElement = dynamicDowncast<SVGGraphicsElement>(*childNode);
+        if (!graphicsElement)
+            continue;
+        auto* renderer = graphicsElement->renderer();
         if (!renderer)
             continue;
-        // Only shapes or paths are supported for direct clipping. We need to fall back to masking for texts.
-        if (is<RenderSVGText>(renderer))
+        if (rendererRequiresMaskClipping(*renderer))
             return false;
-        if (!is<SVGGraphicsElement>(*childNode))
-            continue;
-        auto& style = renderer->style();
-        if (style.display() == DisplayType::None || style.visibility() != Visibility::Visible)
-            continue;
-        // Current shape in clip-path gets clipped too. Fall back to masking.
-        if (style.clipPath())
-            return false;
-        // Fall back to masking if there is more than one clipping path.
-        if (!clipPath.isEmpty())
-            return false;
-        clipPath = downcast<SVGGraphicsElement>(*childNode).toClipPath();
-        clipRule = style.svgStyle().clipRule();
+
+        // For <use> elements, delegate the decision whether to use mask clipping or not to the referenced element.
+        if (auto* useElement = dynamicDowncast<SVGUseElement>(graphicsElement)) {
+            auto* clipChildRenderer = useElement->rendererClipChild();
+            if (clipChildRenderer && rendererRequiresMaskClipping(*clipChildRenderer))
+                return false;
+        }
+
+        clipPath = graphicsElement->toClipPath();
+        clipRule = renderer->style().svgStyle().clipRule();
     }
 
     // Only one visible shape/path was found. Directly continue clipping and transform the content to userspace if necessary.
